minor style changes

--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -1,5 +1,5 @@
 .popup-edit {
-    display: flex;
+    //display: flex;
 
     position: absolute;
     top: 50%;
@@ -15,19 +15,9 @@
 
     background-color: var(--bg-color-modal);
 
-    textarea {
-        //border: var(--border-primary);
-        //border-radius: var(--border-radius);
-        margin-bottom: 1rem;
-
-        font-size: var(--font-size-btn);
-        color: var(--text-color-primary);
-        background: none;
-
-        resize: none;
-    }
-
     label {
+        font-size: 0.95rem;
+
         color: var(--text-color-muted);
     }
 
@@ -45,16 +35,41 @@
 
     &__note-title {
         width: 100%;
-        height: 2.25rem;
+        min-height: 2.25rem;
+
+        margin-bottom: 1rem;
         padding: 0.5rem;
+
         overflow: hidden;
+
+        font-size: var(--font-size-btn);
+        color: var(--text-color-primary);
+        background: none;
+
+        resize: none;
     }
 
     &__note-content {
+        //display: flex;
+        //flex-direction: column;
+
+        box-sizing: border-box;
+
         width: 100%;
-        min-height: 10rem;
-        max-height: 20rem;
+        min-height: 2.25rem;
+        //min-height: 10rem;
+        //max-height: 20rem;
+
+        margin-bottom: 1rem;
         padding: 0.5rem;
+
+        //overflow-y: scroll;
+
+        font-size: var(--font-size-btn);
+        color: var(--text-color-primary);
+        background: none;
+
+        resize: none;
     }
 
     &__options-wrapper {
@@ -63,13 +78,44 @@
 
         margin-bottom: 1rem;
 
-        button {
+
+
+        i {
+            margin-right: 0.5rem;
+        }
+    }
+
+    &__priorities {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
+        &-open-btn {
             display: flex;
             justify-content: left;
 
             width: 100%;
 
-            //border: 0.0625rem  solid var(--border-primary);
+            border-radius: none;
+            border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.125);
+
+            &:hover {
+                background: var(--bg-color-modal-hover);
+            }
+        }
+
+        &-btn-list {
+            display: none;
+
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
+
+            width: fit-content;
+
+            background: var(--bg-color-note);
+        }
+
+        &-btn {
             border-radius: none;
 
             &:hover {
@@ -78,80 +124,78 @@
         }
     }
 
-    &__priorities {
-        display: flex;
-        flex-direction: column;
+    &__tags {
+        &-open-btn {
+            display: flex;
+            justify-content: left;
 
-        gap: 0.5rem;
+            width: 100%;
 
-        color: white;
-    }
-
-    &__priorities-open-btn {
-        border: none;
-        border-radius: none;
-        border-top: 1px solid white;
-        border-bottom: 1px solid white;
-    }
-
-    &__priorities-btn-list {
-        //position: absolute;
-        display: none;
-
-        bottom: -4rem;
-
-        border: var(--border-primary);
-        border-radius: var(--border-radius);
-
-        width: fit-content;
-
-        background: var(--bg-color-note);
-
-        button {
             border-radius: none;
+            border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.125);
 
-            &:hover {
-                background-color: black;
+                        &:hover {
+                background: var(--bg-color-modal-hover);
             }
         }
-    }
 
-    &__priority-btn-1 {
-        &[data-priority="1"] i {
-            color: red;
+        &-btn-list {
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
+
+            width: fit-content;
+
+            background: var(--bg-color-note);
         }
 
-        &[data-priority="2"] i {
-            color: orange;
-        }
-
-        &[data-priority="3"] i {
-            color: yellow;
-        }
-
-        &[data-priority="4"] i {
-            color: rgb(0, 89, 255);
+        &-btn {
+            border-radius: none;
+            &:hover {
+                background: var(--bg-color-modal-hover);
+            }
         }
     }
 
     &__btn-wrapper {
         display: flex;
         gap: 0.75rem;
+
         margin: 0 auto;
+
         width: 16rem;
     }
 
     &__save-btn {
         display: flex;
         justify-content: center;
+
         width: 100%;
+
         background-color: hsl(0, 0%, 15%);
     }
 
     &__cancel-btn {
         display: flex;
         justify-content: center;
+
         width: 100%;
+
         background-color: hsl(0, 74%, 66%);
     }
+}
+
+#popup-edit__priority-btn-1 {
+    color: red;
+}
+
+#popup-edit__priority-btn-2 {
+    color: orange;
+}
+
+#popup-edit__priority-btn-3 {
+    color: yellow;
+}
+
+#popup-edit__priority-btn-4 {
+    color: rgb(0, 89, 255);
 }
