--- a/styles/note.scss
+++ b/styles/note.scss
@@ -31,7 +31,7 @@
         gap: 1rem;
 
         i {
-            margin-right: 0.3rem
+            margin-right: 0.3rem;
         }
     }
 
@@ -68,6 +68,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        gap: 1rem;
 
         margin-top: 1.5rem;
     }
@@ -91,8 +92,31 @@
     }
 
     &__date {
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+        padding: 0.35rem;
+
         color: var(--text-color-muted);
         font-size: var(--font-size-body);
     }
-}
 
+    &__priority {
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+        padding: 0.35rem;
+
+        color: var(--text-color-muted);
+        font-size: var(--font-size-body);
+    }
+
+    &__tags {
+        display: flex;
+        gap: 0.5rem;
+
+        p {
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
+            padding: 0.35rem;
+        }
+    }
+}
