--- a/styles/popup-view.scss
+++ b/styles/popup-view.scss
@@ -9,9 +9,7 @@
     padding: var(--padding-note);
 
     width: 90%;
-    //height: 70%;
-    height: auto;
-    //height: fit-content;
+    min-height: 300px;
 
     background-color: var(--bg-color-modal);
 
@@ -35,10 +33,6 @@
 
     &__note-title {
         width: 100%;
-        //min-height: 2.25rem;
-
-        //margin-bottom: 1rem;
-        //padding: 0.5rem;
 
         overflow: hidden;
 
@@ -50,26 +44,40 @@
     }
 
     &__note-content {
-        //display: flex;
-        //flex-direction: column;
-
         box-sizing: border-box;
 
         width: 100%;
-        //min-height: 2.25rem;
-        //min-height: 10rem;
-        //max-height: 20rem;
 
         margin-bottom: 1rem;
-        //padding: 0.5rem;
-
-        //overflow-y: scroll;
 
         font-size: var(--font-size-btn);
         color: var(--text-color-primary);
         background: none;
 
         resize: none;
+    }
+
+    &__note-top {
+        display: flex;
+        justify-content: space-between;
+
+        margin-bottom: 1rem;
+    }
+
+    &__close-btn {
+        width: 3rem;
+        height: 3rem;
+
+        padding: 0;
+
+        &:hover {
+            background: var(--bg-color-modal-hover);
+        }
+
+        i {
+            position: relative;
+            top: 0.09rem;
+        }
     }
 
     &__options-wrapper {
