--- a/styles/style.scss
+++ b/styles/style.scss
@@ -116,6 +116,18 @@ svg {
     height: 1.5rem;
 }
 
+.popup-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+    height: 100%;
+
+    background-color: hsla(0, 0%, 0%, 0.7);
+}
+
 .container {
     max-width: 700px;
     width: 95%;
