a few removals of some comments and removed the color for the note priority class since it would overide the color set by my js

--- a/styles/note.scss
+++ b/styles/note.scss
@@ -3,8 +3,6 @@
     border-radius: var(--border-radius);
     padding: var(--padding-note);
 
-    //min-height: 20rem;
-
     background: var(--bg-color-note);
     color: var(--text-color-primary);
     font-size: var(--font-size-heading-note);
@@ -16,7 +14,7 @@
 
     &:hover {
         cursor: pointer;
-        transform: translateY(-0.25rem);
+        transform: translateY(-0.15rem);
     }
 
     &__details {
@@ -36,24 +34,7 @@
         text-transform: capitalize;
     }
 
-    &__tags {
-        display: flex;
-        gap: 1rem;
-
-        i {
-            margin-right: 0.3rem;
-        }
-    }
-
-    &__tag {
-        border: var(--border-primary);
-        border-radius: var(--border-radius);
-        padding: 0 0.5rem;
-    }
-
     &__text {
-        //margin-bottom: 5rem;
-
         word-wrap: break-word;
         min-height: 3rem;
         max-height: 3rem;
@@ -67,11 +48,6 @@
     &__options {
         display: flex;
         gap: 0.75rem;
-
-        //border: var(--border-primary);
-        //border-radius: var(--border-radius);
-
-        //overflow: hidden;
     }
 
     &__about {
@@ -102,8 +78,6 @@
     }
 
     &__date {
-        border: var(--border-primary);
-        border-radius: var(--border-radius);
         padding: 0.35rem;
 
         color: var(--text-color-muted);
@@ -111,22 +85,33 @@
     }
 
     &__priority {
-        border: var(--border-primary);
-        border-radius: var(--border-radius);
+        display: flex;
+        justify-content: center;
+        gap: 0.35rem;
+
         padding: 0.35rem;
 
-        color: var(--text-color-muted);
         font-size: var(--font-size-body);
+
+        i {
+            position: relative;
+            bottom: 0.0067rem;
+        }
     }
 
     &__tags {
         display: flex;
         gap: 0.5rem;
 
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+
         p {
-            border: var(--border-primary);
-            border-radius: var(--border-radius);
             padding: 0.35rem;
+        }
+
+        i {
+            margin-right: 0.3rem;
         }
     }
 }
