--- a/styles/popup-view.scss
+++ b/styles/popup-view.scss
@@ -1,14 +1,10 @@
 .popup-view {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
     border: var(--border-primary);
     border-radius: var(--border-radius);
     padding: var(--padding-note);
 
     width: 90%;
+    max-width: 800px;
     min-height: 300px;
 
     background-color: var(--bg-color-modal);
