--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -52,7 +52,6 @@
 
     &__note-content {
         width: 100%;
-        //min-height: 10rem;
         max-height: 20rem;
 
         margin-bottom: 1rem;
@@ -84,6 +83,8 @@
     }
 
     &__priorities-open-btn {
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
     }
 
     &__priorities-btn-list {
