keeping this here because I am eventually going to change the overall color scheme/theme of the app to light(white) and I need to remember what "!important" can help with overiding the colors

--- a/styles/note.scss
+++ b/styles/note.scss
@@ -91,6 +91,7 @@
 
         padding: 0.35rem;
 
+        //color: var(--text-color-muted) !important;
         font-size: var(--font-size-body);
 
         i {
