--- a/styles/style.scss
+++ b/styles/style.scss
@@ -118,13 +118,13 @@ svg {
     display: grid;
     place-items: center;
 
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     background-color: hsla(0, 0%, 0%, 0.7);
 }
