--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -59,8 +59,11 @@
     }
 
     &__options-wrapper {
+        //display: flex;
+        //flex-direction: column;
+
         display: flex;
-        flex-direction: column;
+        gap: 1rem;
 
         margin-bottom: 1rem;
 
