--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -14,54 +14,102 @@
         color: var(--text-color-muted);
     }
 
-    button {
-        color: var(--text-color-primary);
-    }
-
-    i {
-        font-size: 1.5rem;
-    }
-
     &__note {
         width: 100%;
     }
 
-    &__note-title {
-        width: 100%;
-        min-height: 2.25rem;
+    &__note-top {
+        display: flex;
+        justify-content: space-between;
 
         margin-bottom: 1rem;
-        padding: 0.5rem;
+    }
+
+    &__note-context {
+        display: flex;
+        align-items: center;
+        gap: 0.75rem;
+    }
+
+    &__header {
+        color: var(--text-color-primary);
+        font-size: var(--font-size-note-title);
+    }
+
+    &__btn-wrapper {
+        display: flex;
+        gap: 0.75rem;
+    }
+
+    &__close-btn {
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+
+        width: 3rem;
+        height: 3rem;
+
+        padding: 0;
+
+        color: var(--text-color-primary);
+
+        &:hover {
+            background: var(--bg-color-modal-hover);
+        }
+
+        i {
+            position: relative;
+            top: 0.09rem;
+
+            font-size: 1.5rem;
+        }
+    }
+
+    &__save-btn {
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+
+        width: 3rem;
+        height: 3rem;
+
+        padding: 0;
+
+        color: var(--text-color-primary);
+
+        &:hover {
+            background: var(--bg-color-modal-hover);
+        }
+
+        i {
+            position: relative;
+            top: 0.09rem;
+
+            font-size: 1.5rem;
+        }
+    }
+
+    &__note-title {
+        width: 100%;
+        height: 2.25rem;
+
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
 
         overflow: hidden;
 
-        font-size: var(--font-size-btn);
-        color: var(--text-color-primary);
-        background: none;
-
-        resize: none;
+        font-size: 1.25rem;
+        font-weight: bold;
     }
 
     &__note-content {
-        box-sizing: border-box;
-
         width: 100%;
-        min-height: 2.25rem;
+        max-height: 20rem;
 
         margin-bottom: 1rem;
-        padding: 0.5rem;
-
-        font-size: var(--font-size-btn);
-        color: var(--text-color-primary);
-        background: none;
-
-        resize: none;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
     }
 
     &__options-wrapper {
-        //display: flex;
-        //flex-direction: column;
-
         display: flex;
         gap: 1rem;
 
@@ -78,13 +126,10 @@
         gap: 0.5rem;
 
         &-open-btn {
-            display: flex;
-            justify-content: left;
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
 
-            width: 100%;
-
-            border-radius: none;
-            border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.125);
+            color: var(--text-color-primary);
 
             &:hover {
                 background: var(--bg-color-modal-hover);
@@ -92,19 +137,17 @@
         }
 
         &-btn-list {
-            display: none;
-
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
             width: fit-content;
 
-            background: var(--bg-color-note);
+            button {
+                color: var(--text-color-primary);
+            }
         }
 
         &-btn {
-            border-radius: none;
-
             &:hover {
                 background: var(--bg-color-modal-hover);
             }
@@ -112,14 +155,18 @@
     }
 
     &__tags {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+
         &-open-btn {
             display: flex;
             justify-content: left;
 
-            width: 100%;
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
 
-            border-radius: none;
-            border-bottom: 0.0625rem solid rgba(255, 255, 255, 0.125);
+            color: var(--text-color-primary);
 
             &:hover {
                 background: var(--bg-color-modal-hover);
@@ -136,53 +183,25 @@
         }
 
         &-btn {
-            border-radius: none;
             &:hover {
                 background: var(--bg-color-modal-hover);
             }
         }
     }
-
-    &__btn-wrapper {
-        display: flex;
-        gap: 0.75rem;
-
-        margin: 0 auto;
-
-        width: 16rem;
-    }
-
-    &__save-btn {
-        display: flex;
-        justify-content: center;
-
-        width: 100%;
-
-        background-color: hsl(0, 0%, 15%);
-    }
-
-    &__cancel-btn {
-        display: flex;
-        justify-content: center;
-
-        width: 100%;
-
-        background-color: hsl(0, 74%, 66%);
-    }
 }
 
-#popup-edit__priority-btn-1 {
+#popup-edit__priority-btn-1 > i {
     color: red;
 }
 
-#popup-edit__priority-btn-2 {
+#popup-edit__priority-btn-2 > i {
     color: orange;
 }
 
-#popup-edit__priority-btn-3 {
+#popup-edit__priority-btn-3 > i {
     color: yellow;
 }
 
-#popup-edit__priority-btn-4 {
+#popup-edit__priority-btn-4 > i {
     color: rgb(0, 89, 255);
 }
