minor style updates for fonts and borders

--- a/styles/button.scss
+++ b/styles/button.scss
@@ -3,6 +3,7 @@
     height: 3rem;
     width: 3rem;
 
+    border-radius: var(--border-radius);
     background: var(--bg-color-btn-add);
     color: var(--text-color-btn-add);
 
