--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -89,10 +89,12 @@
 
     &__note-title {
         width: 100%;
-        height: 2.25rem;
+        max-height: 3rem;
 
-        padding-top: 0.25rem;
-        padding-bottom: 0.25rem;
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+        margin-bottom: 0.5rem;
+        padding: 0.5rem;
 
         overflow: hidden;
 
@@ -102,18 +104,19 @@
 
     &__note-content {
         width: 100%;
-        max-height: 20rem;
+        //max-height: 20rem;
 
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
         margin-bottom: 1rem;
-        padding-top: 0.25rem;
-        padding-bottom: 0.25rem;
+        padding: 0.5rem;
+
+        overflow-y: scroll;
     }
 
     &__options-wrapper {
         display: flex;
-        gap: 1rem;
-
-        margin-bottom: 1rem;
+        gap: 0.75rem;
 
         i {
             margin-right: 0.5rem;
@@ -126,6 +129,8 @@
         gap: 0.5rem;
 
         &-open-btn {
+            width: 100%;
+
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
@@ -136,21 +141,36 @@
             }
         }
 
+        &-arrow {
+            margin-left: 0.5rem;
+
+            width: 1rem;
+        }
+
         &-btn-list {
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
             width: fit-content;
 
+            overflow: hidden;
+
             button {
                 color: var(--text-color-primary);
             }
         }
 
-        &-btn {
+        &-btn-item {
+            overflow: hidden;
+
+            transition: var(--transition);
+
             &:hover {
                 background: var(--bg-color-modal-hover);
             }
+        }
+
+        &-btn {
         }
     }
 
@@ -174,6 +194,8 @@
         }
 
         &-btn-list {
+            display: none;
+
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
@@ -182,10 +204,17 @@
             background: var(--bg-color-note);
         }
 
-        &-btn {
+        &-btn-item {
+            overflow: hidden;
+
+            transition: var(--transition);
+
             &:hover {
                 background: var(--bg-color-modal-hover);
             }
+        }
+
+        &-btn {
         }
     }
 }
