Styles for the tag feature have been hidden

--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -153,6 +153,8 @@
         flex-direction: column;
         gap: 0.5rem;
 
+        display: none;
+
         &-open-btn {
             display: flex;
             justify-content: left;
