--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -178,6 +178,7 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        display: none;
 
         &-open-btn {
             display: flex;
