styling the tags

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -84,6 +84,10 @@ textarea {
     resize: none;
 }
 
+label {
+    pointer-events: none;
+}
+
 p {
     color: var(--text-color-muted);
     font-size: var(--font-size-body);
@@ -103,6 +107,31 @@ button {
 
     font-size: var(--font-size-btn);
     font-family: "Inter", serif;
+
+    cursor: pointer;
+
+    transition: var(--transition);
+
+    i {
+        pointer-events: none;
+    }
+}
+
+.tag-item {
+    display: flex;
+    align-items: center;
+    text-align: left;
+
+    height: 2.25rem;
+    width: 100%;
+
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    border-radius: var(--border-radius);
+    padding: 0.5rem;
+
+    color: white;
+
+    text-transform: capitalize;
 
     cursor: pointer;
 
@@ -227,10 +256,62 @@ svg {
     }
 }
 
+.input-wrapper {
+    display: inline-block;
+
+    width: 100%;
+    max-width: 300px;
+
+    position: relative;
+
+    .input-field {
+        width: 100%;
+
+        outline: none;
+        border: 1px solid hsla(0, 0%, 100%, 0.2);
+        border-radius: 4px;
+        padding: 10px 12px;
+
+        color: white;
+        background-color: transparent;
+
+        font-size: 1rem;
+        font-family: "Inter", serif;
+
+        transition:
+            border-color 0.3s,
+            box-shadow 0.3s;
+
+        &:focus {
+            border: 1px solid white;
+
+            //box-shadow: 0 0 0.1px white;
+        }
+
+        &:not(:placeholder-shown) + .input-label,
+        &:focus + .input-label {
+            display: none;
+        }
+    }
+
+    .input-label {
+        position: absolute;
+        top: 50%;
+        left: 0.75rem;
+
+        transform: translateY(-50%);
+
+        color: hsla(0, 0%, 100%, 0.2);
+
+        font-size: 1rem;
+
+        transition: all 0.3s ease;
+    }
+}
+
 .rotate {
     transform: rotate(90deg);
 }
-
 
 .red-p1 {
     color: red;
