changed variables for border R and border

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -24,8 +24,8 @@
     --font-size-body: 1rem;
     --font-size-btn: 1rem;
 
-    --border-primary: 0.0625rem solid rgba(255, 255, 255, 0.125);
-    --border-radius: 0.425rem;
+    --border-primary: 0.0625rem solid hsla(0, 0%, 100%, 0.2);
+    --border-radius: 0.25rem;
 
     --padding-note: 1rem;
     --padding-btn: 1rem 1.25rem;
