--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -171,7 +171,7 @@
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
-            width: fit-content;
+            width: 100px;
 
             background: var(--bg-color-note);
         }
