added styles for new sort btn

--- a/styles/button.scss
+++ b/styles/button.scss
@@ -1,5 +1,7 @@
 .btn-new-tag,
-.btn-new-note {
+.btn-new-note,
+.btn-change-view,
+.btn-sort-alphabetically {
     height: 3rem;
     width: 3rem;
 
