--- a/styles/note.scss
+++ b/styles/note.scss
@@ -48,7 +48,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 1rem;
 
         margin-top: 1.5rem;
     }
@@ -93,19 +92,12 @@
         }
     }
 
-    &__tags {
+    &__tag {
         display: flex;
         gap: 0.5rem;
 
-        border: var(--border-primary);
-        border-radius: var(--border-radius);
-
-        p {
-            padding: 0.35rem;
-        }
-
         i {
-            margin-right: 0.3rem;
+            color: aqua;
         }
     }
 }
