--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -119,7 +119,7 @@
         gap: 0.75rem;
 
         i {
-            margin-right: 0.5rem;
+            margin-right: 0.25rem;
         }
     }
 
@@ -169,9 +169,6 @@
                 background: var(--bg-color-modal-hover);
             }
         }
-
-        &-btn {
-        }
     }
 
     &__tags {
@@ -194,14 +191,12 @@
         }
 
         &-btn-list {
-            //display: none;
-
             border: var(--border-primary);
             border-radius: var(--border-radius);
 
             width: fit-content;
 
-            background: var(--bg-color-note);
+            //background: var(--bg-color-note);
         }
     }
 }
