--- a/styles/button.scss
+++ b/styles/button.scss
@@ -1,7 +1,11 @@
 .btn-new-tag,
 .btn-new-note,
 .btn-change-view,
-.btn-sort-alphabetically {
+.btn-sort-alphabetically,
+.btn-sort-by-date,
+.btn-filter-by-priority,
+.btn-filter-by-tag,
+.btn-toggle-options {
     height: 3rem;
     width: 3rem;
 
