--- a/styles/filter.scss
+++ b/styles/filter.scss
@@ -1,128 +1,151 @@
-.filter {
-    display: none;
+.custom {
+    display: block;
 
     position: absolute;
     right: 0;
-    bottom: 0;
 
+    border: var(--border-primary);
+    border-radius: var(--border-radius);
+    margin-top: 1rem;
+
+    background: var(--bg-color-note);
     color: #ffffff !important;
 
-    button {
-        color: #000000 !important;
-        background-color: #f9f9f9;
-    }
-
-    select {
-        width: 200px;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background-color: #f9f9f9;
-        font-size: 16px;
-    }
-
-    &__header {
+    &__view {
         display: flex;
-        justify-content: space-between;
+        flex-direction: column;
         align-items: center;
-        margin-bottom: 1.5rem;
-    }
+        gap: 0.25rem;
 
-    &__view-selector {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
+        margin-bottom: 0.25rem;
+        padding: 0.75rem 0;
 
-        &-label {
-            font-size: 1rem;
-            margin-right: 0.5rem;
+        width: 100%;
+
+        &-top {
+            display: flex;
+            justify-content: flex-start;
+
+            padding: 0 0.75rem;
+
+            width: 100%;
         }
-
-        &-btn {
-            background: none;
-            background: aqua;
-            border: 1px solid #333333;
-            color: #ffffff;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 0.875rem;
-
-            &--active {
-                background-color: #ff7f50;
-                border-color: #ff7f50;
-                color: #1e1e1e;
-            }
-
-            &:hover {
-                background-color: #ff7f50;
-                color: #1e1e1e;
-            }
-        }
-    }
-
-    &__toggle-completed {
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-
-        &-label {
-            font-size: 0.875rem;
-        }
-
-        &-input {
-            transform: scale(1.2);
-        }
-    }
-
-    &__options {
-        margin-bottom: 1.5rem;
 
         &-title {
             font-size: 1rem;
-            margin-bottom: 0.5rem;
         }
 
-        &-section {
-            margin-bottom: 1rem;
+        &-btn-wrapper {
+            display: flex;
+            justify-content: center;
 
-            &-label {
-                display: block;
-                font-size: 0.875rem;
-                margin-bottom: 0.25rem;
-            }
+            width: 100%;
+        }
 
-            &-select {
-                width: 100%;
-                padding: 0.5rem;
-                background-color: #1e1e1e;
-                border: 1px solid #333333;
-                border-radius: 4px;
-                color: #ffffff;
-                font-size: 0.875rem;
+        &-btn {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
 
-                &:hover {
-                    border-color: #ff7f50;
-                }
+            border-radius: var(--border-radius);
+            padding-top: 1.5rem;
+            padding-bottom: 1.5rem;
+
+            width: 50%;
+
+            color: hsl(0, 0%, 88%);
+
+            &:hover {
+                background-color: var(--bg-color-modal-hover);
+                color: hsl(0, 0%, 100%);
             }
         }
     }
 
-    &__footer {
-        text-align: right;
+    &__sort {
+        margin-bottom: 0.25rem;
+        padding-bottom: 0.75rem;
 
-        &-reset-btn {
-            background-color: #ff7f50;
-            color: #1e1e1e;
-            border: none;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
+        &-title {
+            font-size: 1rem;
+            margin-bottom: 0.25rem;
+            padding-left: 0.75rem;
+        }
+
+        &-main {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &-options {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 0.5rem;
+
+            padding: 0.25rem 0.75rem;
+
             cursor: pointer;
-            font-size: 0.875rem;
 
             &:hover {
-                background-color: #e67045;
+                background-color: var(--bg-color-modal-hover);
             }
+        }
+    }
+
+    &__select {
+        width: 180px;
+
+        border: var(--border-primary);
+        border-radius: var(--border-radius);
+
+        font-size: 0.9rem;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        &-trigger {
+            padding: 0.25rem 0.5rem;
+
+            color: hsl(0, 0%, 88%);
+
+            &:hover {
+                color: hsl(0, 0%, 100%);
+            }
+        }
+
+        &-options {
+            position: absolute;
+
+            border: var(--border-primary);
+            border-radius: var(--border-radius);
+
+            background-color: var(--bg-color-note);
+        }
+
+        &-choice {
+            padding: 0.25rem 0.5rem;
+
+            &:hover {
+                background-color: hsl(0, 0%, 38%);
+            }
+        }
+    }
+
+    &__reset-btn {
+        display: inline-block;
+        text-align: left;
+
+        width: 100%;
+
+        padding: 0.5rem 1rem;
+
+        background: none;
+        color: var(--text-color-btn-del);
+
+        &:hover {
+            background-color: var(--bg-color-modal-hover);
         }
     }
 }
