--- a/styles/popup-edit.scss
+++ b/styles/popup-edit.scss
@@ -4,7 +4,8 @@
     padding: var(--padding-note);
 
     width: 90%;
-    min-height: 300px;
+    min-height: 200px;
+    max-width: 1000px;
 
     background-color: var(--bg-color-modal);
 
