--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -1,9 +1,24 @@
+.sidebar-view {
+    //width: 300px;
+    //padding-left: 1rem;
+
+        padding: var(--padding-note);
+        padding-top: 0;
+
+        //background: var(--bg-color-note);
+}
+
 .sidebar {
     display: flex;
     flex-direction: column;
     gap: 4rem;
 
-    width: 500px;
+    min-width: 300px;
+    width: 30%;
+
+    margin-top: 3rem;
+
+    //margin: 0 auto;
 
     &__options {
         display: flex;
@@ -17,7 +32,12 @@
 
         border: (var(--border-primary));
         border-radius: var(--border-radius);
+        margin-bottom: 1.5rem;
         padding: var(--padding-note);
+
+        max-height: 300px;
+
+        overflow-y: scroll;
 
         background: var(--bg-color-note);
 
@@ -39,7 +59,6 @@
             border-radius: var(--border-radius);
             padding: 0.5rem;
 
-            background: var(--bg-color-note);
             color: var(--text-color-primary);
 
             text-transform: capitalize;
@@ -52,6 +71,8 @@
                 pointer-events: none;
 
                 margin-right: 0.5rem;
+
+                color: red;
             }
         }
     }
@@ -63,7 +84,12 @@
 
         border: (var(--border-primary));
         border-radius: var(--border-radius);
+        margin-bottom: 1.5rem;
         padding: var(--padding-note);
+
+        //max-height: 300px;
+
+        overflow-y: scroll;
 
         background: var(--bg-color-note);
 
@@ -85,7 +111,6 @@
             border-radius: var(--border-radius);
             padding: 0.5rem;
 
-            background: var(--bg-color-note);
             color: var(--text-color-primary);
 
             text-transform: capitalize;
@@ -103,12 +128,10 @@
     }
 
     &__header {
+        margin-bottom: 1rem;
+
+        font-size: var(--font-size-heading-category);
+
         color: #ffffff;
     }
-}
-
-.sidebar-view {
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
 }
