--- a/styles/style.scss
+++ b/styles/style.scss
@@ -399,3 +399,19 @@ body {
 .blue-p4 {
     color: rgb(0, 89, 255);
 }
+
+.red-p1 .ri-circle-fill {
+    color: red;
+}
+
+.orange-p2 .ri-circle-fill {
+    color: orange;
+}
+
+.yellow-p3 .ri-circle-fill {
+    color: yellow;
+}
+
+.blue-p4 .ri-circle-fill {
+    color: rgb(0, 89, 255);
+}
