--- a/styles/popup.scss
+++ b/styles/popup.scss
@@ -4,7 +4,7 @@
     padding: var(--padding-note);
 
     width: 90%;
-    min-height: 300px;
+    max-width: 800px;
 
     background-color: var(--bg-color-modal);
 
@@ -107,7 +107,7 @@
         display: flex;
         gap: 1rem;
 
-        margin-bottom: 1rem;
+        //margin-bottom: 1rem;
 
         i {
             margin-right: 0.25rem;
@@ -192,4 +192,10 @@
 
 #popup__priority-btn-4 > i {
     color: rgb(0, 89, 255);
+}
+
+.popup__priority-btn {
+    &:hover {
+        background: var(--bg-color-modal-hover);
+    }
 }
