--- a/src/styles/filter.scss
+++ b/src/styles/filter.scss
@@ -47,17 +47,20 @@
             flex-direction: column;
             align-items: center;
 
-            border-radius: var(--border-radius);
-            padding-top: 1.5rem;
-            padding-bottom: 1.5rem;
+            //border-radius: var(--border-radius);
+            border-radius: 0;
+            padding: 1.75rem 0;
 
             width: 50%;
 
             color: hsl(0, 0%, 88%);
 
             &:hover {
-                background-color: var(--bg-color-modal-hover);
                 color: hsl(0, 0%, 100%);
+            }
+
+            i {
+                font-size: 1.5rem;
             }
         }
     }
