--- a/src/styles/note.scss
+++ b/src/styles/note.scss
@@ -71,18 +71,18 @@
     }
 
     &__date {
-        padding: 0.35rem;
+        //padding: 0.35rem;
 
         color: var(--text-color-muted);
         font-size: var(--font-size-body);
     }
 
     &__priority {
-        display: flex;
-        justify-content: center;
-        gap: 0.35rem;
+        //display: flex;
+        //justify-content: center;
+        //gap: 0.35rem;
 
-        padding: 0.35rem;
+        //padding: 0.35rem;
 
         font-size: var(--font-size-body);
 
@@ -94,9 +94,11 @@
 
     &__tag {
         display: flex;
-        gap: 0.5rem;
+        //gap: 0.5rem;
 
         i {
+            margin-right: 0.5rem;
+
             color: aqua;
         }
     }
