--- a/src/styles/popup.scss
+++ b/src/styles/popup.scss
@@ -82,11 +82,18 @@
     }
 
     &__note-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        line-height: 1.3;
+
         width: 100%;
         height: 2.25rem;
 
         padding-top: 0.25rem;
         padding-bottom: 0.25rem;
+        margin-bottom: 0.5rem;
 
         overflow: hidden;
 
