--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -232,7 +232,7 @@ body {
 
     padding: 1rem 0;
 
-    background-color: var(--bg-color-body);
+    //background-color: var(--bg-color-body);
 
     &__title {
         display: flex;
@@ -265,9 +265,57 @@ body {
 
 .notes-list,
 .bookmarked-notes-list {
+    //display: flex;
+    //flex-direction: column;
+    gap: 1rem;
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+.note__content {
+    display: none;
+}
+
+//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+.list-layout,
+.grid-layout {
+    transition:
+        gap 0.3s ease,
+        transform 0.3s ease;
+}
+
+.list-layout {
     display: flex;
     flex-direction: column;
+
+    gap: 1.5rem;
+}
+
+.grid-layout {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+}
+
+.active {
+    background: var(--bg-color-btn-add);
+    color: hsl(0, 0%, 100%);
+}
+
+.custom__view-btn.active {
+    background: var(--bg-color-btn-add);
+    color: hsl(0, 0%, 100%);
+}
+
+//!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+.note__about {
+    //display: flex;
+    flex-direction: column;
+    align-items: left;
 }
 
 .hidden {
@@ -332,7 +380,7 @@ body {
 
         outline: none;
         border: 1px solid hsla(0, 0%, 100%, 0.2);
-        border-radius: 4px;
+        border-radius: var(--border-radius);
         padding: 10px 12px;
 
         color: white;
@@ -369,6 +417,24 @@ body {
         font-size: 1rem;
 
         transition: all 0.3s ease;
+    }
+}
+
+textarea {
+    border: 1px solid hsla(0, 0%, 100%, 0.2);
+    border-radius: var(--border-radius);
+    padding: 0 0.65rem;
+
+    line-height: 1.3;
+
+    transition:
+        border-color 0.3s,
+        box-shadow 0.3s;
+
+    &:focus {
+        border: 1px solid white;
+
+        //box-shadow: 0 0 0.1px white;
     }
 }
 
