--- a/src/styles/note.scss
+++ b/src/styles/note.scss
@@ -1,4 +1,7 @@
 .note {
+    min-width: 200px;
+    max-width: 800px;
+
     border: (var(--border-primary));
     border-radius: var(--border-radius);
     padding: var(--padding-note);
@@ -14,14 +17,17 @@
     &__details {
         display: flex;
         justify-content: space-between;
+        gap: 2rem;
 
         margin-bottom: 0.75rem;
     }
 
     &__title {
         max-height: 2.25rem;
+        //max
 
         overflow-y: hidden;
+        overflow-x: hidden;
 
         color: var(--text-color-primary);
         font-size: var(--font-size-note-title);
@@ -44,13 +50,13 @@
         gap: 0.75rem;
     }
 
-    &__about {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    // &__about {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: center;
 
-        margin-top: 1.5rem;
-    }
+    //     margin-top: 1.5rem;
+    // }
 
     &__author {
         display: flex;
