--- a/src/styles/note.scss
+++ b/src/styles/note.scss
@@ -1,5 +1,6 @@
 .note {
-    min-width: 200px;
+    //min-width: 200px;
+    min-width: 250px;
     max-width: 800px;
 
     border: (var(--border-primary));
@@ -20,6 +21,10 @@
         gap: 2rem;
 
         margin-bottom: 0.75rem;
+    }
+
+    &__content {
+        //display: none;
     }
 
     &__title {
@@ -50,14 +55,6 @@
         gap: 0.75rem;
     }
 
-    // &__about {
-    //     display: flex;
-    //     justify-content: space-between;
-    //     align-items: center;
-
-    //     margin-top: 1.5rem;
-    // }
-
     &__author {
         display: flex;
         align-items: center;
@@ -80,17 +77,11 @@
         //padding: 0.35rem;
 
         color: var(--text-color-muted);
-        font-size: var(--font-size-body);
+        //font-size: var(--font-size-body);
     }
 
     &__priority {
-        //display: flex;
-        //justify-content: center;
-        //gap: 0.35rem;
-
-        //padding: 0.35rem;
-
-        font-size: var(--font-size-body);
+        //font-size: var(--font-size-body);
 
         i {
             position: relative;
@@ -99,13 +90,13 @@
     }
 
     &__tag {
-        display: flex;
+        //display: flex;
         //gap: 0.5rem;
 
         i {
-            margin-right: 0.5rem;
+            //margin-right: 0.5rem;
 
-            color: aqua;
+            //color: aqua;
         }
     }
 }
